# rust_api_testing

./: Cargo.toml  Dockerfile  README.md
features/: authenticatedUser.feature  publicUser.feature
tests/: authenticated_world.rs  cucumber.rs  public_world.rs
